# Foresee-Navigation

./: .gitignore  .gitmodules  README.md  provision.sh  resnet-tf-1_3.patch
SXLT/: .gitignore  CMakeLists.txt  SXLT.ini  main.cpp
ros_workspace/: .gitignore  add_gitignore.sh  install_isolated.sh  setup.sh
ros_workspace/src/: .gitignore  jackal.rosinstall  localization.rosinstall
ros_workspace/src/deep_segmentation/: CMakeLists.txt  README.md  package.xml
ros_workspace/src/deep_segmentation/launch/: seg.launch
ros_workspace/src/deep_segmentation/src/: .gitattributes  .gitignore  inferer.py  merger.py  node.py  package.xml  perspective.py  read_data.py  sector.py  test.py  twist_seg.py
ros_workspace/src/driver_station/: CMakeLists.txt  package.xml
ros_workspace/src/driver_station/src/: ds.py
ros_workspace/src/robot_control/: CMakeLists.txt  package.xml
ros_workspace/src/robot_control/cart_config/: config.lua
ros_workspace/src/robot_control/config/: base_local_planner_params.yaml  costmap_common_params.yaml
ros_workspace/src/robot_control/launch/: amcl.launch  auton.launch  base.launch  control.launch  jackalstartup.launch  js.launch  navstack.launch  robotstartup.launch  rplidar.launch  teleop.launch  viewCamera.launch
ros_workspace/src/robot_control/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
ros_workspace/src/take_pictures/: CMakeLists.txt  package.xml
superpixel-seg/: .gitignore  CMakeLists.txt
superpixel-seg/exe/: perspective_finder.cpp  superpixel_evaluate.cpp  superpixel_seg.cpp  superpixel_streamer.cpp  train_forest.cpp
superpixel-seg/lib/: FloodFillSsdSuperpixelAlgorithm.cpp  FloodFillSsdSuperpixelAlgorithm.hpp  RTreesClassifier.cpp  RTreesClassifier.hpp  SpVec.cpp  SpVec.hpp  SsdSingleShotSuperClassifier.cpp  SsdSingleShotSuperClassifier.hpp  distance.cpp  distance.hpp  fps.cpp  fps.hpp  superpixel_seg.hpp  util.cpp  util.hpp
(+6 files in other folders)
